<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_evento"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_cofiguracoes" />
        <item
            android:id="@+id/nav_adm"
            android:icon="@drawable/ic_menu_adm"
            android:title="@string/menu_adm" />
    </group>

    <item android:title="@string/menu_comunicacao">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_compartilhar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_enviar" />
        </menu>
    </item>

</menu>
